objects/AgileVizArt__Project__c.object
<CustomObject>
    <description>Defines separate projects or project programs or products.</description>
    <fields>
        <fullName>AgileVizArt__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Business_Hours__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <inlineHelpText>Enter name of business hours definition used to calculate working days</inlineHelpText>
        <label>Business Hours</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Business_Hours_per_Day__c</fullName>
        <defaultValue>24</defaultValue>
        <inlineHelpText>Used to calculate working days. All your week days should have the same number of working hours, e.g. 8 hours. You&apos;ll need to set up a business hours definition accordingly.</inlineHelpText>
        <label>Business Hours per Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Business_Sponsor__c</fullName>
        <inlineHelpText>Name business manager that is responsible for budget and business process. Don&apos;t need to set him up in the system. Just for escalations.

Remember sponsor means power + interest</inlineHelpText>
        <label>Business Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Content_Library_Id__c</fullName>
        <inlineHelpText>Enter a salesforce.com id of your project related content library to enable easiy lookup.</inlineHelpText>
        <label>Content Library Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Content_Library__c</fullName>
        <formula>IF(NOT(ISBLANK(AgileVizArt__Content_Library_Id__c)), HYPERLINK(&quot;/sfc/#workspaceView?selectedWorkspaceId=&quot; &amp; AgileVizArt__Content_Library_Id__c , &quot;Open&quot;, &quot;_parent&quot;), &quot;Please provide a content library id&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Library</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Executive_Sponsor__c</fullName>
        <inlineHelpText>Name sponsor with executive power who supports the project. Don&apos;t need to set him up in the system. Just for escalations.

Remember sponsor means power + interest</inlineHelpText>
        <label>Executive Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__IT_Sponsor__c</fullName>
        <inlineHelpText>Name IT manager that is responsible for budget and IT team. Don&apos;t need to set him up in the system. Just for escalations. 

Remember sponsor means power + interest</inlineHelpText>
        <label>IT Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Key_Objectives__c</fullName>
        <inlineHelpText>Define the top 3-5 project objectives with respect to business value this project should provide.</inlineHelpText>
        <label>Key Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project_Code__c</fullName>
        <inlineHelpText>If required a nick name or project code from customer perspective</inlineHelpText>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project_Goals__c</fullName>
        <inlineHelpText>Describe business drivers that drive this project. Why do we invest in this project? What is the impact if we don&apos;t start this project? How can this project overcome challenges or take advantage or opportunities.</inlineHelpText>
        <label>Business Drivers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project__c</fullName>
        <inlineHelpText>Describe context of this project, are there relationships to other projects, maybe an overall program.</inlineHelpText>
        <label>Project Context</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Velocity__c</fullName>
        <inlineHelpText>Velocity by project based on selected sprints.</inlineHelpText>
        <label>Velocity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>AgileVizArt__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>AgileVizArt__Executive_Sponsor__c</columns>
        <columns>AgileVizArt__Active__c</columns>
        <columns>AgileVizArt__Project__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AgileVizArt__EndDate_gt_StartDate</fullName>
        <active>true</active>
        <description>End date must be greater than start date</description>
        <errorConditionFormula>AgileVizArt__End_Date__c &lt;= AgileVizArt__Start_Date__c</errorConditionFormula>
        <errorDisplayField>AgileVizArt__End_Date__c</errorDisplayField>
        <errorMessage>End date must be greater than start date</errorMessage>
    </validationRules>
</CustomObject>